hphp/hack/test/typecheck/nameof/unsupported_ids.php.exp
File "unsupported_ids.php", line 9, characters 10-10:
Unbound name: `C` (an object type) (Naming[2049])
File "unsupported_ids.php", line 10, characters 10-10:
Unbound name: `d` (an object type) (Naming[2049])
